--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "contentful-typescript-codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.2",
     "@contentful/rich-text-html-renderer": "^16.6.10",
-    "astro": "^4.15.8",
+    "astro": "^5.0.0-beta.6",
     "astro-robots-txt": "^1.0.0",
-    "contentful": "^11.0.2",
-    "typescript": "^5.6.2"
+    "contentful": "^11.2.0",
+    "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
