update TypeScript configuration to include Astro types and exclude dist directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,14 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]    
+      "@/*": ["src/*"]
     },
     "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
     "allowJs": true,
     "jsx": "react-jsx",
     "jsxImportSource": "react"
-  }
+  },
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
