--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "astro preview",
     "astro": "astro",
     "compile": "tsc",
-    "contentful-typescript-codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts"
+    "lint": "npm run lint:code && npm run lint:format && npm run compile -- --noEmit",
+    "lint:fix": "npm run lint:code:fix && npm run lint:format:fix",
+    "lint:code": "npx eslint src/** --report-unused-disable-directives",
+    "lint:code:fix": "npm run lint:code -- --fix",
+    "lint:format": "npx prettier --check \"src/**\"",
+    "lint:format:fix": "npx prettier --write \"src/**\""
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -21,6 +26,10 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^8.12.2",
+    "eslint": "^9.13.0",
+    "eslint-plugin-astro": "^1.3.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "prettier-plugin-astro": "^0.14.1"
   }
 }
