--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
     "@contentful/rich-text-html-renderer": "^16.6.10",
     "astro": "^5.0.0-beta.6",
-    "astro-robots-txt": "^1.0.0",
     "contentful": "^11.2.0",
     "typescript": "^5.6.3"
   },
