--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,17 +59,17 @@ jobs:
           local-dir: dist/
           server-dir: ${{ secrets.FTP_SERVER_DIR }}/
           dangerous-clean-slate: true
-          exclude: |
-            **/.git*
-            **/.git*/**
-            **/node_modules/**
-            **/wp-config.php
-            **/.htaccess
-            **/robots.txt
-            **/sitemap.xml
-            **/uploads/**
-            **/.well-known/**
-            **/cgi-bin/**
-            **/*.env
-            **/config/*.php
-            **/protected-folder/**
+          # exclude: |
+          #   **/.git*
+          #   **/.git*/**
+          #   **/node_modules/**
+          #   **/wp-config.php
+          #   **/.htaccess
+          #   **/robots.txt
+          #   **/sitemap.xml
+          #   **/uploads/**
+          #   **/.well-known/**
+          #   **/cgi-bin/**
+          #   **/*.env
+          #   **/config/*.php
+          #   **/protected-folder/**
