--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "sync": "astro sync",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -24,6 +24,7 @@
     "@contentful/rich-text-html-renderer": "^16.6.10",
     "astro": "^5.0.0-beta.6",
     "contentful": "^11.2.0",
+    "node-fetch": "^3.3.2",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
