--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-perfectionist": "^3.9.1",
     "prettier-plugin-astro": "^0.14.1"
   },
   "engines": {
