--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.12.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-perfectionist": "^3.9.1",
+    "postcss": "^8.4.47",
+    "postcss-nesting": "^13.0.1",
     "prettier-plugin-astro": "^0.14.1"
   },
   "engines": {
