--- a/package.json
+++ b/package.json
@@ -21,19 +21,17 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.2.1",
     "@contentful/rich-text-html-renderer": "^16.6.10",
+    "@stylify/astro": "^0.6.2",
     "astro": "^5.0.0-beta.6",
     "contentful": "^11.2.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.12.2",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-perfectionist": "^3.9.1",
-    "postcss": "^8.4.47",
-    "postcss-nesting": "^13.0.1",
     "prettier-plugin-astro": "^0.14.1"
   },
   "engines": {
