--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,19 +50,43 @@ jobs:
           CONTENTFUL_PREVIEW_TOKEN: ${{ secrets.CONTENTFUL_PREVIEW_TOKEN }}
           WEB3FORMS_PUBLIC_ACCESS_KEY: ${{ secrets.WEB3FORMS_PUBLIC_ACCESS_KEY }}
 
-      - name: 📂 Deploy to FTP
+      - name: 📂 Deploy to FTP public_html dir
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: dist/
-          server-dir: ${{ secrets.FTP_SERVER_DIR }}/
+          server-dir: ${{ secrets.FTP_SERVER_PUBLIC_DIR }}/
           dangerous-clean-slate: true
-          # exclude: |
-          #   **/.git*
-          #   **/.git*/**
-          #   **/node_modules/**
+          exclude: |
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
+          #   **/wp-config.php
+          #   **/.htaccess
+          #   **/robots.txt
+          #   **/sitemap.xml
+          #   **/uploads/**
+          #   **/.well-known/**
+          #   **/cgi-bin/**
+          #   **/*.env
+          #   **/config/*.php
+          #   **/protected-folder/**
+
+      - name: 📂 Deploy to FTP private_html dir
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: dist/
+          server-dir: ${{ secrets.FTP_SERVER_PRIVATE_DIR }}/
+          dangerous-clean-slate: true
+          exclude: |
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
           #   **/wp-config.php
           #   **/.htaccess
           #   **/robots.txt
