--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,6 @@ jobs:
 
   build-and-deploy:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
       repository-projects: write
@@ -47,14 +46,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Set deployment message
-        id: deploy-message
+      - name: Set deployment message and timestamp
+        id: vars
         run: |
           if [ "${{ github.event_name }}" = "repository_dispatch" ]; then
             echo "message=🚀 Deploying from Contentful update" >> $GITHUB_OUTPUT
           else
             echo "message=🚀 Deploying from main branch update" >> $GITHUB_OUTPUT
           fi
+          echo "timestamp=$(date +%Y%m%d_%H%M%S)" >> $GITHUB_OUTPUT
 
       - name: Build Astro site
         run: npm run build
@@ -64,7 +64,31 @@ jobs:
           CONTENTFUL_PREVIEW_TOKEN: ${{ secrets.CONTENTFUL_PREVIEW_TOKEN }}
           WEB3FORMS_PUBLIC_ACCESS_KEY: ${{ secrets.WEB3FORMS_PUBLIC_ACCESS_KEY }}
 
-      - name: 📂 Deploy to FTP public_html Directory
+      # Create backup of current deployment
+      - name: 📦 Backup current deployment
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: ./
+          server-dir: ${{ secrets.FTP_PUBLIC_DIR }}_backups/backup_${{ steps.vars.outputs.timestamp }}/
+          dangerous-clean-slate: false
+          state-name: ".ftp-deploy-sync-state-backup.json"
+          log-level: verbose
+
+      # Clean old backups (keep only last 5)
+      - name: 🧹 Clean old backups
+        shell: bash
+        run: |
+          echo "Cleaning old backups..."
+          # List directories, sort by date (newest first), keep first 5, remove the rest
+          lftp -c "open -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_SERVER }}; \
+          cd ${{ secrets.FTP_PUBLIC_DIR }}_backups; \
+          ls -t | tail -n +6 | while read dir; do rm -rf \"\$dir\"; done"
+
+      # Deploy new version
+      - name: 📂 Deploy new version to FTP public_html Directory
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
