ci: update workflow to include additional paths for exclusion

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,12 +140,13 @@ jobs:
             **/.git*
             **/.git*/**
             **/node_modules/**
+            **/wp/**
+            **/.well-known/**
           #   **/wp-config.php
           #   **/.htaccess
           #   **/robots.txt
           #   **/sitemap.xml
           #   **/uploads/**
-          #   **/.well-known/**
           #   **/cgi-bin/**
           #   **/*.env
           #   **/config/*.php
