--- a/package.json
+++ b/package.json
@@ -19,19 +19,27 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.2.1",
     "@astrojs/sitemap": "^3.2.1",
-    "@contentful/rich-text-html-renderer": "^16.6.10",
-    "astro": "^5.0.0-beta.6",
-    "contentful": "^11.2.0",
-    "typescript": "^5.6.3"
+    "@contentful/rich-text-html-renderer": "^17.0.0",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^4.1.3",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "astro": "^5.5.2",
+    "contentful": "^11.5.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^8.12.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-plugin-astro": "^1.3.0",
+    "@typescript-eslint/parser": "^8.26.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.22.0",
+    "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^3.9.1",
+    "eslint-plugin-perfectionist": "^4.10.1",
     "prettier-plugin-astro": "^0.14.1"
   },
   "engines": {
