set environment for production deployment - enabled production environment for the deploy job in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,8 +109,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-    # Uncomment the line below if you want manual approval for deployments
-    # environment: production
+    environment: production
     steps:
       - name: Download build artifacts
         uses: actions/download-artifact@v4
