--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/react": "^4.3.1",
     "@astrojs/sitemap": "^3.6.0",
     "@contentful/rich-text-html-renderer": "^17.1.3",
+    "@contentful/rich-text-plain-text-renderer": "^17.1.3",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^4.1.3",
     "@types/react": "^19.1.13",
