--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@contentful/rich-text-html-renderer": "^17.1.3",
     "@contentful/rich-text-plain-text-renderer": "^17.1.3",
+    "@fontsource-variable/roboto": "^5.2.8",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^4.1.3",
     "@types/react": "^19.1.13",
