--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.10",
+    "clsx": "^2.1.1",
     "contentful": "^11.7.19",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.1.1",
