--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "compile": "tsc",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "lint": "npm run lint:code && npm run lint:format && npm run compile -- --noEmit",
     "lint:fix": "npm run lint:code:fix && npm run lint:format:fix",
     "lint:code": "npx eslint src/** --report-unused-disable-directives",
@@ -19,17 +21,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.5",
-    "@astrojs/react": "^4.4.1",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
-    "@contentful/rich-text-html-renderer": "^17.1.5",
-    "@contentful/rich-text-plain-text-renderer": "^17.1.5",
+    "@contentful/rich-text-html-renderer": "^17.1.6",
+    "@contentful/rich-text-plain-text-renderer": "^17.1.6",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "astro": "^5.15.3",
+    "astro": "^5.15.4",
     "clsx": "^2.1.1",
-    "contentful": "^11.8.9",
+    "contentful": "^11.8.11",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -37,13 +39,21 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^8.46.2",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@typescript-eslint/parser": "^8.46.3",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.39.0",
-    "eslint-plugin-astro": "^1.4.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-astro": "^1.5.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-perfectionist": "^4.15.1",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "storybook": "^8.6.14"
   },
   "engines": {
     "node": ">=20.0.0"
